# prolog-lsp

./: .gitignore  .gitmodules  Cargo.toml  build.rs  install.sh
prolog-grammar/: Cargo.toml  build.rs
prolog-grammar/src/: lib.rs
src/: attr_state.rs  init.rs  main.rs  utils.rs
src/lsp/: completions.rs  diagnostics.rs  document.rs  hover.rs  inlay_hints.rs  mod.rs  queries.rs  references.rs  symbols.rs
src/lsp/docs/: data_trunk.md  mod.rs  rel_copy_dir.md  rel_copy_file.md  rel_css.md  rel_icon.md  rel_inline.md  rel_rust.md  rel_sass.md  rel_tailwind.md  script.md
src/lsp/docs/rel_copy_dir/: href.md  mod.rs
src/lsp/docs/rel_css/: href.md
src/lsp/docs/rel_inline/: mod.rs  type.md
src/lsp/docs/rel_inline/types/: css.md  html.md  js.md  mjs.md  svg.md
src/lsp/docs/rel_rust/: data_bin.md  data_bindgen_targets.md  data_cargo_all_features.md  data_cargo_features.md  data_cargo_no_default_features.md  data_cross_origin.md  data_keep_debug.md  data_loader_shim.md  data_no_demangle.md  data_reference_types.md  data_target_name.md  data_type.md  data_typescript.md  data_wasm_import_name.md  data_wasm_no_import.md  data_wasm_opt.md  data_wasm_opt_params.md  data_weak_refs.md  href.md  mod.rs
src/lsp/docs/rel_sass_scss/: data_inline.md  href.md
src/lsp/docs/rel_tailwind/: data_inline.md  href.md  mod.rs
src/lsp/docs/script/: mod.rs  src.md
src/lsp/queries/: attributes.rs
src/util/: formatting.rs  mod.rs  partition_iter.rs  self_aware_iter.rs  sorted_small_set.rs
vscode/: extension.js  language-configuration.json  package-lock.json  package.json
