[package]
name = "prolog-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
prolog-grammar = { path = "prolog-grammar" }
lsp-types = { version = "0.97.0" }
lsp-server = { version = "0.7.9" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.60", features = ["derive"] }
shellexpand = { version = "3.1.2" }
anyhow = { version = "1.0.102" }
serde_json = "1.0.149"
rustc-hash = "2.1.1"
tree-sitter = "0.25.10"
streaming-iterator = "0.1.9"
constcat = "0.6.1"
texter = { version = "0.2.2", features = ["tree-sitter", "lsp-types"] }
paste = "1.0.15"
smallvec = "1.15.1"
smol_str = "0.3.6"
indexmap = "2.13.0"
